working version with only importer running

--- a/src/ChavahDbImporter/appsettings.json
+++ b/src/ChavahDbImporter/appsettings.json
@@ -1,23 +1,14 @@
 {
 
-    "Logging": {
-        "IncludeScopes": true,
-        "Debug": {
-            "LogLevel": {
-                "Default": "Debug",
-                "System": "Warning",
-                "Microsoft": "Warning",
-                "SetMinimumLevel": "Debug"
-            }
-        },
-        "Console": {
-            "LogLevel": {
-                "Default": "Debug",
-                "System": "Warning",
-                "Microsoft": "Warning",
-                "SetMinimumLevel": "Debug"
-            }
-        }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    },
+    "Console": {
+      "IncludeScopes": true
     }
-    
+  }
+
 }
