--- a/src/ChavahDbImporter/appsettings.json
+++ b/src/ChavahDbImporter/appsettings.json
@@ -9,6 +9,11 @@
     "Console": {
       "IncludeScopes": true
     }
-  }
+  },
 
+  "Database": {
+    "Name": "ChavahDb",
+    "Url": "http://localhost:8080",
+    "ImportFile": "ChavahDb.ravendbdump"
+  }
 }
