--- a/src/ChavahDbImporter/ChavahDbImporter.csproj
+++ b/src/ChavahDbImporter/ChavahDbImporter.csproj
@@ -18,11 +18,13 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="2.2.0" />
-	</ItemGroup>
+    <PackageReference Include="RavenDB.Client" Version="4.1.3" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<Content Include="appsettings*.json" CopyToOutputDirectory="PreserveNewest" />
 		<Content Include="hostsettings*.json" CopyToOutputDirectory="PreserveNewest" />
-	</ItemGroup>
+    <Content Include="*.ravendbdump" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
 
 </Project>
